fixed link text, fixed covering info btn issue

--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,11 @@
 	padding:0;
 	margin:0;
 }
+
+a {
+    color:#232323;
+}
+
 .twitter-share-button { width: 80px !important; }
 
 
@@ -60,8 +65,8 @@ button:focus {
     position: absolute;
     top: 2px;
     left: 4px;
-    z-index: 3000;
-    color:#000;
+    z-index: 3002;
+    color:#232323;
     cursor:pointer;
 }
 
@@ -70,7 +75,7 @@ button:focus {
 	margin-bottom: 3px;
 	margin-right: 7px;
 	z-index: 3000;
-	color:#000;
+	color:#232323;
 	cursor:pointer;
     position:absolute;
     right:0;
@@ -88,7 +93,7 @@ button:focus {
 	margin-bottom: 3px;
 	margin-left: 7px;
 	z-index:99;
-	color:#000;
+	color:#232323;
 	cursor:pointer;
 }
 
@@ -102,7 +107,7 @@ button:focus {
     font-size:15px;
     text-align:center;
 	display:none;
-	color:#000;
+	color:#232323;
 	background-color:rgba(236,240,241,.7);
 }
 
@@ -141,7 +146,7 @@ and (max-device-width : 480px) {
     margin-left:-50%;
     margin-top:-10%;
     z-index:3000;
-    color:#000;
+    color:#232323;
     text-align:center;
 }
 
@@ -267,7 +272,7 @@ body {
 	z-index:98;
 }
 #attributions {
-	color:#000;
+	color:#232323;
 	position:absolute;
 	width:100%;
 	left: 0%;
